--- a/src/style.css
+++ b/src/style.css
@@ -684,6 +684,8 @@ hr {
     margin: -5em auto 3em auto;
     color: white;
     text-align: center;
+    display: flex;
+    width: 40%;
 }
 
 .footer p {
@@ -691,4 +693,169 @@ hr {
     font-size: 1.75em;
     font-weight: 300;
     opacity: 80%;
+    margin: auto auto;
+}
+
+.footer img {
+    flex-basis: 5%;
+    margin: auto auto;
+    transition-duration: 1s;
+}
+
+.footer img:hover {
+    transform-origin: center;
+    transform: scale(1.1);
+}
+
+#more-section {
+    user-select: none;
+    position: relative;
+    margin: 5em auto;
+    width: 50%;
+    text-align: center;
+}
+
+#more-section h1 {
+    font-family: Inter;
+    font-weight: 500;
+    font-size: 5em;
+    color: white;
+    text-shadow: 0 0 2em white;
+    opacity: 100%;
+    transition-duration: 1s;
+    margin: auto;
+}
+
+#more-container {
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+.more-box {
+    margin: 5em 0em;
+    width: 40%;
+    padding: 5em;
+    border-radius: 10%;
+    transform-origin: center;
+    color: white;
+    transform: scale(0.9);
+    transition-duration: 1s;
+    display: flex;
+    justify-content: center;
+}
+
+.more-box:hover {
+    transform: scale(1);
+    background-color: #1F003D;
+}
+
+.more-box h2 {
+    font-family: Inter;
+    font-weight: 500;
+    font-size: 2em;
+    color: white;
+    text-shadow: 0 0 2em white;
+    opacity: 100%;
+    transition-duration: 1s;
+    margin: auto 1em;
+    flex-basis: 25%;
+}
+
+.more-box p {
+    font-family: Inter;
+    font-weight: 500;
+    font-size: 3em;
+    opacity: 100%;
+    margin: 1em auto;
+    flex-grow: 1;
+}
+
+.items {
+    flex-basis: 70%;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-items: center;
+}
+
+.item1 {
+    padding: 0.75em 1.5em;
+    border-width: 0.25em;
+    border-radius: 1em;
+    border-style: solid;
+    border-color: #BAD7F2;
+    color: #BAD7F2;
+    text-align: center;
+    transition-duration: 0.5s;
+    margin: 1em 0.5em;
+}
+
+.item1:hover {
+    background-color: #BAD7F2;
+    color: black;
+    font-weight: 700;
+}
+
+.item1 p {
+    font-family: Inter;
+    font-weight: 500;
+    font-size: 1.5em;
+    transition-duration: 0.5s;
+    margin: 0;
+}
+
+.item2 {
+    padding: 0.75em 1.5em;
+    border-width: 0.25em;
+    border-radius: 1em;
+    border-style: solid;
+    border-color: #BAF2D8;
+    color: #BAF2D8;
+    text-align: center;
+    transition-duration: 0.5s;
+    margin: 1em 0.5em;
+}
+
+.item2:hover {
+    background-color: #BAF2D8;
+    color: black;
+    font-weight: 700;
+}
+
+.item2 p {
+    font-family: Inter;
+    font-weight: 500;
+    font-size: 1.5em;
+    transition-duration: 0.5s;
+    margin: 0;
+}
+
+.item3 {
+    padding: 0.75em 1.5em;
+    border-width: 0.25em;
+    border-radius: 1em;
+    border-style: solid;
+    border-color: #F2BAC9;
+    color: #F2BAC9;
+    text-align: center;
+    transition-duration: 0.5s;
+    margin: 1em 0.5em;
+}
+
+.item3:hover {
+    background-color: #F2BAC9;
+    color: black;
+    font-weight: 700;
+}
+
+.item3 p {
+    font-family: Inter;
+    font-weight: 500;
+    font-size: 1.5em;
+    transition-duration: 0.5s;
+    margin: 0;
 }
