Updated projects and resume

--- a/src/style.css
+++ b/src/style.css
@@ -681,7 +681,7 @@ hr {
     border-width: 0.25em;
     border-radius: 1em;
     border-style: solid;
-    border-color: #BAD7F2;
+    border-color: # ;
     color: #BAD7F2;
     text-align: center;
     transition-duration: 1s;
